--- a/site/gallery/sections/section_building/index.html
+++ b/site/gallery/sections/section_building/index.html
@@ -7341,7 +7341,7 @@
 </pre></div>
 
 <div class="output display_data">
-<p><img src="/static/45d1f0c2031948d8ca68c890c1fd8da120dd840e.png" style="margin:auto; display: block; max-width: 75%" /></p>
+<p><img src="../../../static/45d1f0c2031948d8ca68c890c1fd8da120dd840e.png" style="margin:auto; display: block; max-width: 75%" /></p>
 </div>
 </div>
 <div class="cell markdown">
@@ -7380,7 +7380,7 @@
 </pre></div>
 
 <div class="output display_data">
-<p><img src="/static/897b2813113af4f569d702e4c93bce2b0f33558d.png" style="margin:auto; display: block; max-width: 75%" /></p>
+<p><img src="../../../static/897b2813113af4f569d702e4c93bce2b0f33558d.png" style="margin:auto; display: block; max-width: 75%" /></p>
 </div>
 </div>
 <div class="cell code" data-execution_count="6">
@@ -7388,7 +7388,7 @@
 </pre></div>
 
 <div class="output display_data">
-<p><img src="/static/47d4eabb86f3c2267c603b925c5a056c8b21fe1c.png" style="margin:auto; display: block; max-width: 75%" /></p>
+<p><img src="../../../static/47d4eabb86f3c2267c603b925c5a056c8b21fe1c.png" style="margin:auto; display: block; max-width: 75%" /></p>
 </div>
 </div>
 <div class="cell code" data-execution_count="7">
@@ -7396,7 +7396,7 @@
 </pre></div>
 
 <div class="output display_data">
-<p><img src="/static/47d4eabb86f3c2267c603b925c5a056c8b21fe1c.png" style="margin:auto; display: block; max-width: 75%" /></p>
+<p><img src="../../../static/47d4eabb86f3c2267c603b925c5a056c8b21fe1c.png" style="margin:auto; display: block; max-width: 75%" /></p>
 </div>
 </div>
 <section id="define-damage-state-regions-the-get_fibers-module-2-define-damage-state-regions-the-get_fibers-module" class="cell markdown" data-tags="[]">
@@ -7492,7 +7492,7 @@
 </pre></div>
 
 <div class="output display_data">
-<p><img src="/static/897b2813113af4f569d702e4c93bce2b0f33558d.png" style="margin:auto; display: block; max-width: 75%" /></p>
+<p><img src="../../../static/897b2813113af4f569d702e4c93bce2b0f33558d.png" style="margin:auto; display: block; max-width: 75%" /></p>
 </div>
 </div>
 <div class="cell code" data-execution_count="17">
@@ -7521,7 +7521,7 @@
 </pre></div>
 
 <div class="output display_data">
-<p><img src="/static/ddcf04fd423be96634ed614053192ed1f7d5ccde.png" style="margin:auto; display: block; max-width: 75%" /></p>
+<p><img src="../../../static/ddcf04fd423be96634ed614053192ed1f7d5ccde.png" style="margin:auto; display: block; max-width: 75%" /></p>
 </div>
 </div>
 <div class="cell code" data-execution_count="18">
@@ -7530,7 +7530,7 @@
 </pre></div>
 
 <div class="output display_data">
-<p><img src="/static/0e8cee87c0ff1af3faca5c9dc9d4aa1ba427c408.png" style="margin:auto; display: block; max-width: 75%" /></p>
+<p><img src="../../../static/0e8cee87c0ff1af3faca5c9dc9d4aa1ba427c408.png" style="margin:auto; display: block; max-width: 75%" /></p>
 </div>
 </div>
 <div class="cell code" data-execution_count="19">
@@ -7547,7 +7547,7 @@
 
 </div>
 <div class="output display_data">
-<p><img src="/static/1b92bddf543e602d9f2463bef267f4106744c00a.png" style="margin:auto; display: block; max-width: 75%" /></p>
+<p><img src="../../../static/1b92bddf543e602d9f2463bef267f4106744c00a.png" style="margin:auto; display: block; max-width: 75%" /></p>
 </div>
 </div>
 <div class="cell code" data-execution_count="20">
