--- a/site/gallery/sections/section_limits/index.html
+++ b/site/gallery/sections/section_limits/index.html
@@ -7379,7 +7379,7 @@
 </pre></div>
 
 <div class="output display_data">
-<p><img src="/static/08c3101a9d00452464eacea608875c911617c11e.png" style="margin:auto; display: block; max-width: 75%" /></p>
+<p><img src="../../../static/08c3101a9d00452464eacea608875c911617c11e.png" style="margin:auto; display: block; max-width: 75%" /></p>
 </div>
 </div>
 <div class="cell code" data-execution_count="7">
@@ -7491,7 +7491,7 @@
 </pre></div>
 
 <div class="output display_data">
-<p><img src="/static/89a1944c19965a37ea50bc7427b7236c7f956dd7.png" style="margin:auto; display: block; max-width: 75%" /></p>
+<p><img src="../../../static/89a1944c19965a37ea50bc7427b7236c7f956dd7.png" style="margin:auto; display: block; max-width: 75%" /></p>
 </div>
 </div>
 <div class="cell markdown">
