cmp - rebuild site

--- a/contrib/_out/218-Example 1 InputFile: 2D soil column subjected to earthquake base excitation.html
+++ b/contrib/_out/218-Example 1 InputFile: 2D soil column subjected to earthquake base excitation.html
@@ -4,7 +4,9 @@
 title="wikilink">Return to Tcl input files for the provided application
 examples:</a></p>
 <hr />
-<p>&lt;source lang="tcl"&gt;</p>
+<p>
+```tcl
+</p>
 <ol>
 <li>unit. meter, K-N, K-Pa,K-Kg</li>
 </ol>
@@ -452,4 +454,6 @@ sensitivityAlgorithm -computeAtEachStep</p>
 acce.txt -dt 0.01"</p>
 <p>set startT [clock seconds] analyze 1000 0.01 set endT [clock seconds]
 puts "Execution time: [expr $endT-$startT] seconds."</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
