--- a/contrib/_out/220-Example 2 InputFile: 3D soil block subjected to static push over.html
+++ b/contrib/_out/220-Example 2 InputFile: 3D soil block subjected to static push over.html
@@ -4,7 +4,9 @@
 title="wikilink">Return to Tcl input files for the provided application
 examples:</a></p>
 <hr />
-<p>&lt;source lang="tcl"&gt;</p>
+<p>
+```tcl
+</p>
 <ol>
 <li>unit. meter, K-N, K-Pa,K-Kg</li>
 <li>refer to "Quan Gu, Joel P. Conte, Ahmed Elgamal and Zhaohui Yang.
@@ -99,4 +101,6 @@ RCM analysis Static</p>
 <p>sensitivityAlgorithm -computeAtEachStep</p>
 <p>set startT [clock seconds] analyze 50 set endT [clock seconds] puts
 "Execution time: [expr $endT-$startT] seconds."</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
