--- a/contrib/_out/34-Background.html
+++ b/contrib/_out/34-Background.html
@@ -25,5 +25,9 @@ analysis&lt;/blockquote&gt;</p>
 </tbody>
 </table>
 <p>Example:</p>
-<p>&lt;source lang="python"&gt;</p>
-<p>&lt;/source&gt;</p>
+<p>
+```python
+</p>
+<p>
+```
+</p>
