--- a/contrib/_out/347-J2CyclicBoundingSurface Material.html
+++ b/contrib/_out/347-J2CyclicBoundingSurface Material.html
@@ -89,7 +89,9 @@ stress</p>
 <p>This example, provides an conventional triaxial compression test
 using one 8-node SSPBrick element and J2CyclicBOundingSurface material
 model.</p>
-<p>&lt;source lang="tcl"&gt;</p>
+<p>
+```tcl
+</p>
 <ol>
 <li>HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
 #</li>
@@ -166,7 +168,9 @@ $strains $ii] sp 8 3 [lindex $strains $ii] }</p>
 Newton numberer Plain system SparseSPD integrator LoadControl 0.004
 analysis Static</p>
 <p>analyze 2000</p>
-<p>wipe &lt;/source&gt;</p>
+<p>wipe 
+```
+</p>
 <h2 id="references">References</h2>
 <p>Borja R., Amies A., "Multiaxial Cyclic Plasticity Model for Clays".
 Journal of Geotech. Engrg., 1994, 120(6):1051-1070</p>
