--- a/contrib/examples/229-Excavation Supported by Cantilevered Sheet Pile Wall.html
+++ b/contrib/examples/229-Excavation Supported by Cantilevered Sheet Pile Wall.html
@@ -255,7 +255,9 @@ removed next, followed by the contact element and Lagrange multiplier
 node connected to the removed layer, and then by the nodes along the
 upper boundary of the removed layer. The full removal and analysis
 process for the first excavation lift is provided here</p>
-<p>&lt;source lang="tcl"&gt;</p>
+<p>
+```tcl
+</p>
 <ol>
 <li>remove objects associated with lift
 1-----------------------------------</li>
@@ -285,7 +287,9 @@ node 480 remove node 482 remove node 484</p>
 <ol>
 <li>run analysis after object removal</li>
 </ol>
-<p>analyze 4 &lt;/source&gt;</p>
+<p>analyze 4 
+```
+</p>
 <p>There are a total of ten excavation lifts in the example analysis,
 representing the soil on the right-hand side of the sheet pile wall up
 to a depth of 5 m. Due to the use of GiD to create the input file, the
