--- a/contrib/examples/485-PM4Sand-Example 1.html
+++ b/contrib/examples/485-PM4Sand-Example 1.html
@@ -2,7 +2,9 @@
 
 <p>This example, provides an undrained confined direct simple shear test
 using one 4-node SSPQuadUP element and PM4Sand material model.</p>
-<p>&lt;source lang="tcl"&gt;</p>
+<p>
+```tcl
+</p>
 <ol>
 <li>HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
 #</li>
@@ -121,4 +123,6 @@ FirstCall 1 analyze 25 1</p>
 <li>update Poisson's ratio for analysis</li>
 </ol>
 <p>setParameter -value 0.3 -ele 1 poissonRatio 1 analyze 5000 1</p>
-<p>wipe &lt;/source&gt;</p>
+<p>wipe 
+```
+</p>
