--- a/contrib/examples/486-PM4Sand-Example 2.html
+++ b/contrib/examples/486-PM4Sand-Example 2.html
@@ -1,6 +1,8 @@
 # PM4Sand-Example 2
 
-<p>&lt;source lang="tcl"&gt;</p>
+<p>
+```tcl
+</p>
 <ol>
 <li>HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
 #</li>
@@ -177,4 +179,6 @@ $controlDisp $controlDisp} -factor 1"</p>
 analyze 1 1.0 set b [eleResponse 1 stress] set hDisp [nodeDisp 3 1] if
 {$hDisp &gt;= $devDisp} { exit } } set numCycle [expr $numCycle + 0.25]
 remove loadPattern 3 remove timeSeries 2 }</p>
-<p>wipe &lt;/source&gt;</p>
+<p>wipe 
+```
+</p>
