--- a/contrib/guides/getting-started/284-GettingStartedInputFile.tcl -- Additional Models.html
+++ b/contrib/guides/getting-started/284-GettingStartedInputFile.tcl -- Additional Models.html
@@ -1,7 +1,9 @@
 # GettingStartedInputFile.tcl -- Additional Models
 
 <p>__NOTOC__ <img src="BuildingTclLogo.gif" title="BuildingTclLogo.gif"
-alt="BuildingTclLogo.gif" /> &lt;source lang="Tcl"&gt;</p>
+alt="BuildingTclLogo.gif" /> 
+```Tcl
+</p>
 <ol>
 <li>another set of models:</li>
 </ol>
@@ -41,7 +43,9 @@ ElevationModelLabel PortalFrameARC iGridLineLabel "0.0 10.0"
 addModelData -addElevation ElevationModelLabel PortalFrameBRC
 iGridLineLabel "A B" addModel</p>
 <p>puts --DoneAdditionalModels--</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
 <hr />
 <p>Return to <a href="Getting_Started_with_BuildingTcl"
 title="wikilink">Getting Started with BuildingTcl</a></p>
