--- a/contrib/guides/getting-started/286-GettingStartedInputFile.tcl -- BuildAndAnalyze.html
+++ b/contrib/guides/getting-started/286-GettingStartedInputFile.tcl -- BuildAndAnalyze.html
@@ -1,7 +1,9 @@
 # GettingStartedInputFile.tcl -- BuildAndAnalyze
 
 <p>__NOTOC__ <img src="BuildingTclLogo.gif" title="BuildingTclLogo.gif"
-alt="BuildingTclLogo.gif" /> &lt;source lang="Tcl"&gt;</p>
+alt="BuildingTclLogo.gif" /> 
+```Tcl
+</p>
 <ol>
 <li><ol>
 <li></li>
@@ -39,7 +41,9 @@ InterstingFullCycles MaxEQ1 BuildAndAnalyze</p>
 </ol>
 <p>UnselectAllModels UnselectAllLoadCombinations</p>
 <p>SelectAllModels SelectAllLoadCombinations BuildAndAnalyze</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
 <hr />
 <p>Return to <a href="Getting_Started_with_BuildingTcl"
 title="wikilink">Getting Started with BuildingTcl</a></p>
