--- a/contrib/guides/getting-started/288-GettingStartedInputFile.tcl -- Gravity Loads.html
+++ b/contrib/guides/getting-started/288-GettingStartedInputFile.tcl -- Gravity Loads.html
@@ -1,7 +1,9 @@
 # GettingStartedInputFile.tcl -- Gravity Loads
 
 <p>__NOTOC__ <img src="BuildingTclLogo.gif" title="BuildingTclLogo.gif"
-alt="BuildingTclLogo.gif" /> &lt;source lang="Tcl"&gt;</p>
+alt="BuildingTclLogo.gif" /> 
+```Tcl
+</p>
 <ol>
 <li>GRAVITY LOADS ---------------------------------------</li>
 </ol>
@@ -12,7 +14,9 @@ LoadDescription "Modified Weight" addLoadData LoadTypeLabel Gravity
 addLoad addLoadData LoadLabel LL1; # LiveLoad Gravity Load addLoadData
 LoadDescription "Live-Load Weight" addLoadData LoadTypeLabel Gravity
 addLoad</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
 <hr />
 <p>Return to <a href="Getting_Started_with_BuildingTcl"
 title="wikilink">Getting Started with BuildingTcl</a></p>
