--- a/contrib/guides/getting-started/289-GettingStartedInputFile.tcl -- Lateral Loads.html
+++ b/contrib/guides/getting-started/289-GettingStartedInputFile.tcl -- Lateral Loads.html
@@ -1,7 +1,9 @@
 # GettingStartedInputFile.tcl -- Lateral Loads
 
 <p>__NOTOC__ <img src="BuildingTclLogo.gif" title="BuildingTclLogo.gif"
-alt="BuildingTclLogo.gif" /> &lt;source lang="Tcl"&gt;</p>
+alt="BuildingTclLogo.gif" /> 
+```Tcl
+</p>
 <ol>
 <li>LATERAL LOADS ---------------------------------------</li>
 </ol>
@@ -37,7 +39,9 @@ input addLoadData GMscaleY 0.3; # scaling of ground motion for input
 addLoadData GMfilenameZ "H-E12140.AT2"; # ground-motion filename for
 input addLoadData GMscaleZ 1.; # scaling of ground motion for input
 addLoad puts --DoneLoad--</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
 <hr />
 <p>Return to <a href="Getting_Started_with_BuildingTcl"
 title="wikilink">Getting Started with BuildingTcl</a></p>
