--- a/contrib/guides/getting-started/291-GettingStartedInputFile.tcl -- Load Combinations.html
+++ b/contrib/guides/getting-started/291-GettingStartedInputFile.tcl -- Load Combinations.html
@@ -1,7 +1,9 @@
 # GettingStartedInputFile.tcl -- Load Combinations
 
 <p>__NOTOC__ <img src="BuildingTclLogo.gif" title="BuildingTclLogo.gif"
-alt="BuildingTclLogo.gif" /> &lt;source lang="Tcl"&gt;</p>
+alt="BuildingTclLogo.gif" /> 
+```Tcl
+</p>
 <ol>
 <li>LOAD COMBINATIONS ---------------------------------------</li>
 </ol>
@@ -61,7 +63,9 @@ addLoadCombinationData -GravityLoad LoadLabel DL1 LoadFactor 1.
 addLoadCombinationData -LateralLoad LoadLabel EQ3D TmaxAnalysis 5.*\$sec
 GMfilenameX "H-E12140.AT2" GMfilenameZ "H-E01140.AT2" GMscaleX 1.1
 GMscaleZ 1.2 addLoadCombination puts --DoneLoadCombinations--</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
 <hr />
 <p>Return to <a href="Getting_Started_with_BuildingTcl"
 title="wikilink">Getting Started with BuildingTcl</a></p>
