--- a/contrib/guides/getting-started/292-GettingStartedInputFile.tcl -- Model: 3DFrames.html
+++ b/contrib/guides/getting-started/292-GettingStartedInputFile.tcl -- Model: 3DFrames.html
@@ -1,7 +1,9 @@
 # GettingStartedInputFile.tcl -- Model: 3DFrames
 
 <p>__NOTOC__ <img src="BuildingTclLogo.gif" title="BuildingTclLogo.gif"
-alt="BuildingTclLogo.gif" /> &lt;source lang="Tcl"&gt;</p>
+alt="BuildingTclLogo.gif" /> 
+```Tcl
+</p>
 <ol>
 <li>3D Frame</li>
 </ol>
@@ -17,7 +19,9 @@ ElevationModelLabel RCTestFrame2Story2BayBbraced iGridLineLabel "A C"
 TributaryWidth 2.5*\$ft addModelData -addElevation ElevationModelLabel
 RCTestFrame2Story2BayBbraced iGridLineLabel "B" TributaryWidth 5.*\$ft
 addModel</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
 <hr />
 <p>Return to <a href="Getting_Started_with_BuildingTcl"
 title="wikilink">Getting Started with BuildingTcl</a></p>
