--- a/contrib/guides/getting-started/293-GettingStartedInputFile.tcl -- Model: Elevations.html
+++ b/contrib/guides/getting-started/293-GettingStartedInputFile.tcl -- Model: Elevations.html
@@ -1,7 +1,9 @@
 # GettingStartedInputFile.tcl -- Model: Elevations
 
 <p>__NOTOC__ <img src="BuildingTclLogo.gif" title="BuildingTclLogo.gif"
-alt="BuildingTclLogo.gif" /> &lt;source lang="Tcl"&gt;</p>
+alt="BuildingTclLogo.gif" /> 
+```Tcl
+</p>
 <ol>
 <li>MODELS ---------------------------------------</li>
 <li>Elevations</li>
@@ -33,7 +35,9 @@ JointOffsetsSwitch on addModelData TributaryWidth 5.*\$ft addModelData
 -GravityLoad LoadLabel DL1 FloorRange "2 3" DistributedLoad 100.*\$psf
 addModelData -GravityLoad LoadLabel LL1 FloorRange "2 3" DistributedLoad
 74.*\$psf addModel</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
 <hr />
 <p>Return to <a href="Getting_Started_with_BuildingTcl"
 title="wikilink">Getting Started with BuildingTcl</a></p>
