--- a/contrib/guides/getting-started/294-GettingStartedInputFile.tcl -- Model: Plans.html
+++ b/contrib/guides/getting-started/294-GettingStartedInputFile.tcl -- Model: Plans.html
@@ -1,7 +1,9 @@
 # GettingStartedInputFile.tcl -- Model: Plans
 
 <p>__NOTOC__ <img src="BuildingTclLogo.gif" title="BuildingTclLogo.gif"
-alt="BuildingTclLogo.gif" /> &lt;source lang="Tcl"&gt;</p>
+alt="BuildingTclLogo.gif" /> 
+```Tcl
+</p>
 <ol>
 <li>Plan</li>
 </ol>
@@ -11,7 +13,9 @@ iVerticalGridLineLabel "0.0 10.0 25.0" addModelData
 iHorizontalGridLineLabel "A B C" addModelData -HorizontalBayWidth Bay 1
 Width 20*\$ft addModelData -HorizontalBayWidth Bay 2 Width 30*\$ft
 addModelData -VerticalBayWidth BayRange "1 2" Width 5*\$ft addModel</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
 <hr />
 <p>Return to <a href="Getting_Started_with_BuildingTcl"
 title="wikilink">Getting Started with BuildingTcl</a></p>
