--- a/contrib/guides/getting-started/296-GettingStartedInputFile.tcl -- Setup &amp; Materials.html
+++ b/contrib/guides/getting-started/296-GettingStartedInputFile.tcl -- Setup &amp; Materials.html
@@ -1,7 +1,9 @@
 # GettingStartedInputFile.tcl -- Setup &amp; Materials
 
 <p>__NOTOC__ <img src="BuildingTclLogo.gif" title="BuildingTclLogo.gif"
-alt="BuildingTclLogo.gif" /> &lt;source lang="Tcl"&gt;</p>
+alt="BuildingTclLogo.gif" /> 
+```Tcl
+</p>
 <ol>
 <li>Initialize Input</li>
 <li>make sure you source the BuildingTcl library files first:</li>
@@ -26,7 +28,9 @@ addMaterial</p>
 <p>addMaterialData MaterialLabel 60ksiReinforcingSteel addMaterialData
 MaterialModelLabel Steel addMaterialData fY 68.8*\$ksi addMaterial puts
 --DoneMaterials--</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
 <hr />
 <p>Return to <a href="Getting_Started_with_BuildingTcl"
 title="wikilink">Getting Started with BuildingTcl</a></p>
