--- a/contrib/guides/getting-started/313-Getting Started with OpenSees -- Recorders.html
+++ b/contrib/guides/getting-started/313-Getting Started with OpenSees -- Recorders.html
@@ -8,15 +8,23 @@ displacements at node 3 into a file named Node3.out:</p>
 ($node1 $node2 ...)&gt; &lt;-nodeRange $startNode $endNode&gt;
 &lt;-region $RegionTag&gt; &lt;-node all&gt; -dof ($dof1 $dof2 ...)
 $respType</em></p>
-<p>&lt;source lang="Tcl"&gt;recorder Node -file Node3.out -time -node 3
--dof 1 2 disp &lt;/source&gt;</p>
+<p>
+```Tcl
+recorder Node -file Node3.out -time -node 3
+-dof 1 2 disp 
+```
+</p>
 <p>The element recorder will be used to output the element forces.
 Element forces for element 1 will be output into file Element1.out:</p>
 <p><em>recorder Element &lt;-file $fileName&gt; &lt;-time&gt; &lt;-ele
 ($ele1 $ele2 ...)&gt; &lt;-eleRange $startEle $endEle&gt; &lt;-region
 $regTag&gt; &lt;-ele all&gt; ($arg1 $arg2 ...)</em></p>
-<p>&lt;source lang="Tcl"&gt; recorder Element -file Element1.out -time
--ele 1 force &lt;/source&gt;</p>
+<p>
+```Tcl
+ recorder Element -file Element1.out -time
+-ele 1 force 
+```
+</p>
 <p>NOTE: To write the data in the output files a user needs to either
 exit OpenSees.exe or to issue "wipe" command at the end of the code.</p>
 <hr />
