--- a/contrib/_out/222-Example 3 InputFile: 2D RC frame subjected to earthquake base excitation.html
+++ b/contrib/_out/222-Example 3 InputFile: 2D RC frame subjected to earthquake base excitation.html
@@ -4,7 +4,9 @@
 title="wikilink">Return to Tcl input files for the provided application
 examples:</a></p>
 <hr />
-<p>&lt;source lang="tcl"&gt;</p>
+<p>
+```tcl
+</p>
 <ol>
 <li>unit. meter, K-N, K-Pa,K-Kg</li>
 <li>-- refer to: Q.Gu. FINITE ELEMENT RESPONSE SENSITIVITY AND
@@ -328,4 +330,6 @@ Newton numberer RCM system BandGeneral</p>
 acce.txt -factor 10 -dt 0.01"</p>
 <p>set startT [clock seconds] analyze 1000 0.01 set endT [clock seconds]
 puts "Execution time: [expr $endT-$startT] seconds."</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
