--- a/contrib/_out/224-Example 4 InputFile: 3-D RC frame subjected to earthquake base excitation.html
+++ b/contrib/_out/224-Example 4 InputFile: 3-D RC frame subjected to earthquake base excitation.html
@@ -4,7 +4,9 @@
 title="wikilink">Return to Tcl input files for the provided application
 examples:</a></p>
 <hr />
-<p>&lt;source lang="tcl"&gt;</p>
+<p>
+```tcl
+</p>
 <ol>
 <li>refer to " Quan Gu, Michele Barbato, and Joel P. Conte. Handling of
 Constraints in Finite Element Response</li>
@@ -590,4 +592,6 @@ constraints Transformation</p>
 <p>analyze 2500 0.01</p>
 <p>set endT [clock seconds] puts "Execution time: [expr $endT-$startT]
 seconds."</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
