--- a/contrib/_out/345-Introduction to OpenSees.html
+++ b/contrib/_out/345-Introduction to OpenSees.html
@@ -454,46 +454,64 @@ title="FranksTrussExample.JPG" alt="FranksTrussExample.JPG" /></p>
 <dt>Build Model</dt>
 
 </dl>
-<p>&lt;source lang="Tcl"&gt; model Basic -ndm 2 -ndf 2 node 1 0.0 0.0
+<p>
+```Tcl
+ model Basic -ndm 2 -ndf 2 node 1 0.0 0.0
 node 2 144.0 0.0 node 3 168.0 0.0 node 4 72.0 96.0 fix 1 1 1 fix 2 1 1
 fix 3 1 1 uniaxialMaterial Elastic 1 3000.0 element truss 1 1 4 10.0 1
 element truss 2 2 4 5.0 1 element truss 3 3 4 5.0 1 pattern Plain 1
-“Linear” { load 4 100.0 -50.0 } &lt;/source&gt;</p>
+“Linear” { load 4 100.0 -50.0 } 
+```
+</p>
 <dl>
 <dt>Static Nonlinear Analysis with LoadControl</dt>
 
 </dl>
-<p>&lt;source lang="Tcl"&gt; constraints Transformation numberer RCM
+<p>
+```Tcl
+ constraints Transformation numberer RCM
 system BandGeneral test NormDispIncr 1.0e-6 6 2 algorithm Newton
 integrator LoadControl 0.1 analysis Static analyze 10
-&lt;/source&gt;</p>
+
+```
+</p>
 <dl>
 <dt>Transient Nonlinear Analysis with Newmark</dt>
 
 </dl>
-<p>&lt;source lang="Tcl"&gt; constraints Transformation numberer RCM
+<p>
+```Tcl
+ constraints Transformation numberer RCM
 system BandGeneral test NormDispIncr 1.0e-6 6 2 algorithm Newton
 integrator Newmark 0.5 0.25 analysis Transient analyze 2000 0.01
-&lt;/source&gt; <img src="GettingStartedGeometry.JPG"
+
+```
+ <img src="GettingStartedGeometry.JPG"
 title="GettingStartedGeometry.JPG" alt="GettingStartedGeometry.JPG" />
 &lt;h3&gt;Plane Frame&lt;/h3&gt;</p>
 <dl>
 <dt>Build Model</dt>
 
 </dl>
-<p>&lt;source lang="Tcl"&gt; model Basic -ndm 2 -ndf 3 node 1 0.0 0.0
+<p>
+```Tcl
+ model Basic -ndm 2 -ndf 3 node 1 0.0 0.0
 node 2 504.0 0.0 node 3 0.0 432.0 node 4 504.0 432.0 fix 1 1 1 1 fix 2 1
 1 1 mass 3 5.18 0.0 0.0 mass 4 5.18 0.0 0.0 geomTransf Linear 1 element
 elasticBeamColumn 1 1 3 3600.0 4227.0 1080000.0 1 element
 elasticBeamColumn 1 4 3 3600.0 4227.0 1080000.0 1 element
 elasticBeamColumn 3 3 4 5760.0 4227.0 4423680.0 1 pattern Plain 1 Linear
 { load 3 0.0 -2000.0 -168074.0 load 4 0.0 -2000.0 168074.0 }</p>
-<p>&lt;/source&gt;</p>
+<p>
+```
+</p>
 <dl>
 <dt>Gravity-Load Analysis</dt>
 
 </dl>
-<p>&lt;source lang="Tcl"&gt;</p>
+<p>
+```Tcl
+</p>
 <ol>
 <li>create analysis &amp; perform analysis</li>
 </ol>
@@ -503,12 +521,16 @@ analysis Static analyze 10</p>
 <ol>
 <li>look at what happened to node 3</li>
 </ol>
-<p>print node 3 &lt;/source&gt;</p>
+<p>print node 3 
+```
+</p>
 <dl>
 <dt>Cyclic Lateral Load Analysis</dt>
 
 </dl>
-<p>&lt;source lang="Tcl"&gt;</p>
+<p>
+```Tcl
+</p>
 <ol>
 <li>set gravity loads constant &amp; reset time in domain</li>
 </ol>
@@ -524,4 +546,6 @@ analysis Static analyze 10</p>
 <p>foreach {numSteps stepSize} {10 0.1 10 -0.1 10 -0.1 10 0.1 10 0.1} {
 integrator LoadControl $stepSize analyze $numSteps set time [getTime]
 set disp [nodeDisp 3 1] puts “Time: $time Displacement $disp” }
-&lt;/source&gt;</p>
+
+```
+</p>
