--- a/contrib/commands/201-EleResponse Command.html
+++ b/contrib/commands/201-EleResponse Command.html
@@ -25,13 +25,21 @@ the type of element being used.</p></td>
 <p>EXAMPLE:</p>
 <p>For a simple truss example if these are the recorder commands
 used:</p>
-<p>&lt;source lang="tcl"&gt; recorder Element -time -ele 1 2 3 -file
+<p>
+```tcl
+ recorder Element -time -ele 1 2 3 -file
 a.out axialForce</p>
 <p>recorder Element -time -ele 1 2 3 -file b.out material stress
-&lt;/source&gt;</p>
+
+```
+</p>
 <p>then these are the corresponding eleResponse commands</p>
-<p>&lt;source lang="tcl"&gt; set a [eleResponse 1 forces]</p>
-<p>set b [eleResponse 1 material stress] &lt;/source&gt;</p>
+<p>
+```tcl
+ set a [eleResponse 1 forces]</p>
+<p>set b [eleResponse 1 material stress] 
+```
+</p>
 <hr />
 <p>Code Developed by: <span style="color:blue"> fmk
 </span></p>
