--- a/contrib/commands/391-Model command.html
+++ b/contrib/commands/391-Model command.html
@@ -43,8 +43,12 @@ Sections, Elements, LoadPatterns, TimeSeries, Transformations, Blocks
 and Constraints. These additional commands are described in the
 subsequent chapters.</p>
 <p>EXAMPLE:</p>
-<p>&lt;source lang="tcl"&gt; model basic -ndm 2 -ndf 3; # 2 spacial
-dimensions, 3 DOF's per node &lt;/source&gt;</p>
+<p>
+```tcl
+ model basic -ndm 2 -ndf 3; # 2 spacial
+dimensions, 3 DOF's per node 
+```
+</p>
 <p><a href="Example3.1.tcl" title="wikilink">Example3.1.tcl</a></p>
 <hr />
 <p>Code Developed by: <span style="color:blue"> fmk
