--- a/contrib/commands/669-SteelMP Command.html
+++ b/contrib/commands/669-SteelMP Command.html
@@ -43,8 +43,12 @@ EXAMPLE
 <li>To identify the elastic modulus, E, of the material 1 at section 3
 of element 4, the &lt;specific object arguments&gt; string becomes</li>
 </ul>
-<p>&lt;source lang="tcl"&gt; parameter 1 element 4 section 3 material 1
-E &lt;/source&gt;</p>
+<p>
+```tcl
+ parameter 1 element 4 section 3 material 1
+E 
+```
+</p>
 <ul>
 <li>To identify the elastic modulus, E, of elastic section 3 of element
 4 (for elastic section, no specific material need to be</li>
@@ -55,8 +59,12 @@ E &lt;/source&gt;</p>
 defined), the &lt;specific object arguments&gt; string becomes:
 </dd>
 </dl>
-<p>&lt;source lang="tcl"&gt; parameter 1 element 4 section 3 E
-&lt;/source&gt;</p>
+<p>
+```tcl
+ parameter 1 element 4 section 3 E
+
+```
+</p>
 <ul>
 <li>To parameterize E for element 4 with material 1 (no section need to
 be defined), the &lt;specific object arguments&gt; string</li>
@@ -67,8 +75,12 @@ be defined), the &lt;specific object arguments&gt; string</li>
 simplifies as:
 </dd>
 </dl>
-<p>&lt;source lang="tcl"&gt; parameter 1 element 4 material 1 E
-&lt;/source&gt;</p>
+<p>
+```tcl
+ parameter 1 element 4 material 1 E
+
+```
+</p>
 <hr />
 <dl>
 <dt></dt>
