--- a/contrib/examples/344-Introduction To Tcl.html
+++ b/contrib/examples/344-Introduction To Tcl.html
@@ -28,7 +28,11 @@ procedure defined previously by the user. White space (i.e., space or
 tab) is used to separate the command name and its arguments, and a
 newline or semicolon is used to terminate a command. The arguments to a
 command are just <strong>strings</strong>. Here is an example:</p>
-<p>&lt;source lang="tcl"&gt; puts "Hello World" &lt;/source&gt;</p>
+<p>
+```tcl
+ puts "Hello World" 
+```
+</p>
 <p>The <strong>puts</strong> is the command. In this example it takes
 one argument. In this form puts will take the single string argument at
 write it to the terminal. The quotation marks <strong>"</strong> are
@@ -47,13 +51,21 @@ had typed them interactively. For example, if the file
 <strong>hellloWorld.tcl</strong> contained the example puts command used
 above, the user could cause the interpreter to execute this command by
 invoking the following:</p>
-<p>&lt;source lang="tcl"&gt; source "helloWorld.tcl" &lt;/source&gt;</p>
+<p>
+```tcl
+ source "helloWorld.tcl" 
+```
+</p>
 <p>While not very useful for this example, for users creating finite
 element models and analyzing them it is obviously very useful.</p>
 <h3 id="variables">Variables</h3>
 <p>Another basic command in tcl is the <strong>set</strong> command. It
 is used to assign a value to a variable.</p>
-<p>&lt;source lang="tcl"&gt; set msg "Hello World" &lt;/source&gt;</p>
+<p>
+```tcl
+ set msg "Hello World" 
+```
+</p>
 <p>In this example we are setting the variable <strong>msg'' to be equal
 to the string</strong>Hello World<strong>. It is useful to note that a
 number of predefined variables exist when you start an interpreter. For
@@ -66,8 +78,12 @@ square brackets, [ ]. The Tcl interpreter takes everything between the
 brackets and evaluates it as a command. It rewrites the outer command by
 replacing the square brackets and everything between them with the
 result of the nested command.</p>
-<p>&lt;source lang="tcl"&gt; set msgLength [string length " Hello
-World"] &lt;/source&gt;</p>
+<p>
+```tcl
+ set msgLength [string length " Hello
+World"] 
+```
+</p>
 <h3 id="mathematical_expressions">Mathematical Expressions</h3>
 <p>The Tcl interpreter itself does not evaluate math expressions.
 Instead, the expr command is used to evaluate math expressions. The
@@ -81,16 +97,24 @@ operators, <strong>+, -, *, /, %, &lt;, &lt;=, &gt;, &gt;=, ==, !=,
 cos(), tan(), sqrt(), log(), log10(), pow(), rand(), srand(), exp(),
 ...</strong> found in many programming languages are available for use
 in expressions.</p>
-<p>&lt;source lang="tcl"&gt; set a [expr 3 /2.0]</p>
+<p>
+```tcl
+ set a [expr 3 /2.0]</p>
 <h1 id="set_pi_expr_2asin1.0">&gt; 1.5 set pi [expr 2*asin(1.0)]</h1>
-<p>&gt; 3.14159.. &lt;/source&gt;</p>
+<p>&gt; 3.14159.. 
+```
+</p>
 <p>A word or warning, integer values are promoted to floating point
 values as needed, WHICH MEANS THE USER MUST BE WARY OF INTEGER
 DIVISION.</p>
-<p>&lt;source lang="tcl"&gt; set a [expr 3 /2.0] =&gt; 1.5 set b [expr
+<p>
+```tcl
+ set a [expr 3 /2.0] =&gt; 1.5 set b [expr
 3/2]</p>
 <h1 id="set_c_expr_3.02">&gt; 1 set c [expr 3.0/2]</h1>
-<p>&gt; 1.5 &lt;/source&gt;</p>
+<p>&gt; 1.5 
+```
+</p>
 <h3 id="procedures">Procedures</h3>
 <p>Tcl uses the proc command to define procedures. Once defined, a Tcl
 procedure is used just like any of the built-in Tcl commands. The basic
@@ -109,20 +133,28 @@ the sum of these args. That is followed by an example setting the value
 of the variable <strong>c</strong> to be result of invoking the
 procedure <strong>sum</strong> with the values <strong>3</strong> and
 <strong>5</strong>.</p>
-<p>&lt;source lang="tcl"&gt; proc sum {a b} { return [expr $a + $b] }
-set c [sum 3 5] =&gt; 8 &lt;/source&gt;</p>
+<p>
+```tcl
+ proc sum {a b} { return [expr $a + $b] }
+set c [sum 3 5] =&gt; 8 
+```
+</p>
 <h3 id="file_io">FILE I/O</h3>
 <p>Like any programming language, Tcl allows files to be opened for both
 reading and writing. The following is an example that will open the file
 <strong>tmp.out</strong> and write the factorial for the vaues 1 through
 10 to it:</p>
-<p>&lt;source lang="tcl"&gt; proc factorial {n} { set a 1; set product
+<p>
+```tcl
+ proc factorial {n} { set a 1; set product
 $n; while {$a &lt; $n} { set product [expr $product * $a]; set a [expr
 $a + 1]; # or incr a 1 } return $product }</p>
 <p>set file1 [open tmp.out w]</p>
 <p>for {set i 1} {$i &lt;= 10} {incr i 1} { puts $file1 "factorial $i =
 [factorial $i]" }</p>
-<p>close $file1 &lt;/source&gt;</p>
+<p>close $file1 
+```
+</p>
 <h3 id="tcl_books">Tcl Books</h3>
 <ol>
 <li>Tcl and the Tk Toolkit by John Ousterhout, Addison-Wesley, 1994,
