--- a/site/contrib/modeling/uniaxialMaterial/587-Reinforcing Steel Material/index.html
+++ b/site/contrib/modeling/uniaxialMaterial/587-Reinforcing Steel Material/index.html
@@ -13412,6 +13412,7 @@ yield stress.
 <code class="parameter-table-flag">-GABuck</code>
 </p>
 </td>
+<td>
 <!--
 </tr>
 </tbody>
@@ -13459,7 +13460,7 @@ r can be a real number between [0.0 and 1.0]
 <dt>
 </dt>
 <dd>
-r=1.0 full reduction (no buckling)
+<code>r=1.0</code> full reduction (no buckling)
 </dd>
 </dl>
 <dl>
@@ -13490,12 +13491,13 @@ Buckling constant (see Figures 3 and 4)
 </tr>
 </tbody>
 </table>
+</td>
 </tr>
-<p>
-&lt;/blockquote&gt;
-</p>
+<!--
+<p>&lt;/blockquote&gt;</p>
 <table>
 <tbody>
+-->
 <tr class="odd">
 <td>
 <p>
@@ -13506,13 +13508,13 @@ Buckling constant (see Figures 3 and 4)
 <p>
 Buckling model based on Dhakal and Maekawa (2002)
 </p>
+<!--
 </td>
 </tr>
 </tbody>
 </table>
-<p>
-&lt;blockquote&gt;
-</p>
+<p>&lt;blockquote&gt;</p>
+-->
 <table>
 <tbody>
 <tr class="odd">
@@ -13544,11 +13546,12 @@ Default: alpha=1.0, this parameter is optional.
 </tr>
 </tbody>
 </table>
-<p>
-&lt;/blockquote&gt;
-</p>
+</tr>
+<!--
+<p>&lt;/blockquote&gt;</p>
 <table>
 <tbody>
+-->
 <tr class="odd">
 <td>
 <p>
@@ -13559,13 +13562,13 @@ Default: alpha=1.0, this parameter is optional.
 <p>
 Coffin-Manson Fatigue and Strength Reduction
 </p>
+<!--
 </td>
 </tr>
 </tbody>
 </table>
-<p>
-&lt;blockquote&gt;
-</p>
+<p>&lt;blockquote&gt;</p>
+-->
 <table>
 <tbody>
 <tr class="odd">
@@ -13605,12 +13608,14 @@ Cyclic strength reduction constant (see Figure 6 and Equation 3)
 </tr>
 </tbody>
 </table>
-<p>
-&lt;/blockquote&gt;
-</p>
+</td>
+</tr>
+<!--
+<p>&lt;/blockquote&gt;</p>
 <table>
 <tbody>
 <tr class="odd">
+-->
 <td>
 <p>
 <code class="parameter-table-flag">-IsoHard</code>
